/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'application'
}

application {
    mainClass = 'com.github.koxsosen.Main'
    applicationDefaultJvmArgs = ['-Xms1G', '-Xmx1G', '-XX:+UseG1GC', '-XX:G1HeapRegionSize=4M', '-XX:+UnlockExperimentalVMOptions', '-XX:+ParallelRefProcEnabled', '-XX:+AlwaysPreTouch', '-XX:MaxInlineLevel=15', '-Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector']
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://jitpack.io')
    }

    maven {
        url = uri('https://oss.sonatype.org/content/repositories/snapshots/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.javacord:javacord:3.3.3-SNAPSHOT'
    implementation 'de.btobastian.sdcf4j:sdcf4j-core:1.0.10'
    implementation 'de.btobastian.sdcf4j:sdcf4j-javacord:1.0.10'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
    implementation 'com.lmax:disruptor:4.0.0.RC1'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'org.json:json:20211205'
}

group = 'com.github.koxsosen'
version = '1.6.5'
description = 'Ducky'
java.sourceCompatibility = JavaVersion.VERSION_17

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
